# habitquest

./: .autofix_backup  .github  .gitignore  .performance_config  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  .vscode  ADDITIONAL_IMPROVEMENTS_PLAN_20251006.md  AGENTS.md  AI_ANALYSIS_20250923.md  AI_ANALYSIS_20250924.md  AI_ANALYSIS_20251107.md  AI_AUTOMATION_SUMMARY_20250923.md  AI_AUTOMATION_SUMMARY_20251107.md  AI_CODE_REVIEW_20250923.md  AI_CODE_REVIEW_20250924.md  AI_CODE_REVIEW_20251107.md  AI_PERFORMANCE_OPTIMIZATION_20250923.md  AI_PERFORMANCE_OPTIMIZATION_20250924.md  AI_PERFORMANCE_OPTIMIZATION_20251107.md  AI_SECURITY_ANALYSIS_20251107.md  ARCHITECTURE.md  AUTOMATION_SUMMARY_20250923.md  AUTOMATION_SUMMARY_20250924.md  BUILD_PERFORMANCE_20251028.md  CODE_QUALITY_REPORT_20250924_090222.md  COMPLETE_IMPLEMENTATION_SUMMARY_20251006.md  COMPREHENSIVE_TEST_REPORT_20250924_082048.md  CONSOLIDATION_COMPLETE.md  COPILOT_REVIEW_FIXES_20251006.md  Code.code-workspace  DEVELOPMENT_TRACKER.md  DUPLICATE_FILES_CLEANUP_GUIDE.md  Dockerfile  ENHANCEMENT_PLAN.md  GEMINI.md  HABITQUEST_PLAN.md  HABITQUEST_TRIAGE.md  HABIT_QUEST_COMPLETION.md  (+59 more)
Testing/CodingReviewer-main/: .autofix_backup  .build_cache_config  .coveragerc  .file_corruption_log.txt  .gitignore  .gitlab-ci.yml  AI_LEARNING_ENHANCEMENT_SUMMARY.md  ContentView_Enhanced.swift  EnhancedFileUploadView_V2.swift  PROJECT_CLEANUP_AI_COMPLETE.md  QuantumAIEnhancer.swift  QuantumEnhancementView.swift  add_documentation.swift  cleanup_project.sh  convert_project_format.sh  create_ci_compatible_project.sh  fix_xcode_project.sh  ml_integration_deep_test.swift  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  smart_builder.sh  smart_multiplatform_builder.sh  test_ml_integration.swift
Testing/CodingReviewer-main/.advanced_cicd_enhancement/: canary_dashboard.html  canary_deploy.sh  canary_deployment.json  cicd_enhancement_report_20250730_083344.md  cicd_enhancement_report_20250730_114503.md  cicd_enhancement_report_20250730_114510.md  cicd_enhancement_report_20250730_114517.md  cicd_enhancement_report_20250730_114523.md  cicd_enhancement_report_20250730_114530.md  cicd_enhancement_report_20250730_114536.md  cicd_enhancement_report_20250730_114543.md  cicd_enhancement_report_20250730_114558.md  cicd_enhancement_report_20250730_114605.md  cicd_enhancement_report_20250730_114611.md  cicd_enhancement_report_20250730_114618.md  cicd_enhancement_report_20250730_114624.md  cicd_enhancement_report_20250730_114631.md  cicd_enhancement_report_20250730_114637.md  cicd_enhancement_report_20250730_114644.md  cicd_enhancement_report_20250730_114650.md  cicd_enhancement_report_20250730_114657.md  cicd_enhancement_report_20250730_114703.md  cicd_enhancement_report_20250730_114710.md  cicd_enhancement_report_20250730_114716.md  cicd_enhancement_report_20250730_114722.md  cicd_enhancement_report_20250730_114729.md  cicd_enhancement_report_20250730_114735.md  cicd_enhancement_report_20250730_114742.md  (+125 more)
(+4982 files in other folders)
